--- a/Neuromap_code.ipynb
+++ b/Neuromap_code.ipynb
@@ -270,7 +270,7 @@
     "undergrad_map = folium.Map()\n",
     "#Loop through locations and add the markers on the map\n",
     "for undergrad_location in range(len(undergrad_locs)): \n",
-    "    folium.Marker([lat_list[undergrad_location], long_list[undergrad_location]], popup=undergrad_locs[undergrad_location]).add_to(m)\n",
+    "    folium.Marker([lat_list[undergrad_location], long_list[undergrad_location]], popup=undergrad_locs[undergrad_location]).add_to(undergrad_map)\n",
     "    \n",
     "#display map\n",
     "undergrad_map"
@@ -356,7 +356,7 @@
     "research_map = folium.Map()\n",
     "#Loop through locations and add the markers on the map\n",
     "for research_location in range(len(research_locs)): \n",
-    "    folium.Marker([lat_list[research_location], long_list[research_location]], popup=research_locs[research_location]).add_to(m)\n",
+    "    folium.Marker([lat_list[research_location], long_list[research_location]], popup=research_locs[research_location]).add_to(research_map)\n",
     "\n",
     "#display map\n",
     "research_map"
@@ -471,7 +471,7 @@
     "phd_map = folium.Map()\n",
     "#Loop through locations and add the markers on the map\n",
     "for phd_location in range(len(phd_locs)): \n",
-    "    folium.Marker([lat_list[phd_location], long_list[phd_location]], popup=phd_locs[phd_location]).add_to(m)\n",
+    "    folium.Marker([lat_list[phd_location], long_list[phd_location]], popup=phd_locs[phd_location]).add_to(phd_map)\n",
     "\n",
     "#display map    \n",
     "phd_map\n"
